fix broken reads in the FPGA register query driver function